# libaudio

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindLibSamplerate.cmake  FindLibSndFile.cmake  FindPortAudio.cmake
libaudio/: audio_buffer.cpp  audio_buffer.h  audio_chunk.cpp  audio_chunk.h  audio_device.h  audio_file_descriptor.h  audio_stream.cpp  audio_stream.h  audio_stream_factory.cpp  audio_stream_factory.h  audio_stream_settings.h
libaudio/backends/: iaudio_backend.h  port_audio_backend.cpp  port_audio_backend.h
libaudio/reader/: audio_reader.cpp  audio_reader.h  iaudio_reader.h  sndlib_audio_reader.cpp  sndlib_audio_reader.h
libaudio/reader/decoder/: iaudio_decoder.h  sndlib_audio_decoder.cpp  sndlib_audio_decoder.h
libaudio/reader/resampler/: iaudio_resampler.h  sr_audio_resampler.cpp  sr_audio_resampler.h
libaudio/resampler/: iaudio_resampler.h  sr_audio_resampler.cpp  sr_audio_resampler.h
libaudio/stream/: ibasic_audio_stream.h  port_audio_stream.cpp  port_audio_stream.h
scripts/: build.sh
